[package]
name = "convex_hulls"
version = "0.1.0"
authors = ["Hendrik Schawe <hendrik.schawe@uni-oldenburg.de>"]
edition = "2021"

[dependencies]
itertools = "0.10"
assert_approx_eq = "1.0"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
visual = []
